Fix a few gaps in our support for M3 configs and more closely align our M3 dev-app styles with our M2 dev-app styles (#28516)
* fix(material/theming): Fix M3 theme reliance on legacy theme inspection API

* test: Align M3 demo styles more closely with M2 demo styles

In particular, call the `all-component` mixins rather than individual
mixins.

* test: Allow toggling color API back compat CSS in the demo app

--- a/src/material/core/theming/_inspection.scss
+++ b/src/material/core/theming/_inspection.scss
@@ -285,7 +285,7 @@ $_typography-properties: (font, font-family, line-height, font-size, letter-spac
   }
   $result: ();
   @each $system in $systems {
-    $result: map.deep-merge($result, map.get($theme, $_internals, '#{$system}-tokens'));
+    $result: map.deep-merge($result, map.get($theme, $_internals, '#{$system}-tokens') or ());
   }
   @return $result;
 }
