--- a/src/material/core/theming/_m2-inspection.scss
+++ b/src/material/core/theming/_m2-inspection.scss
@@ -123,7 +123,8 @@ $_typography-properties: (font, font-family, line-height, font-size, letter-spac
   }
   $palette: map.get($colors, $palette-name);
   @if not $palette {
-    @error 'Unrecognized palette name:' $palette-name;
+    @error $palette-name $args $theme;
+    @error #{'Unrecognized palette name:'} $palette-name;
   }
   @return theming.get-color-from-palette($palette, $args...);
 }
